# SceneSense

./: .gitignore  README.md  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/com/example/visionai/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  host-toolchain.cmake  visionai_jni.cpp
app/src/main/cpp/cmake/: FindOpenCL.cmake
app/src/main/cpp/opencl/: libOpenCL_stub.c
app/src/main/java/com/example/visionai/: MainActivity.kt  MainViewModel.kt
app/src/main/java/com/example/visionai/inference/: LlamaModel.kt
app/src/main/java/com/example/visionai/ui/camera/: CameraPreview.kt  CameraSetup.kt  PhotoCaptureHandler.kt  VideoCaptureHandler.kt
app/src/main/java/com/example/visionai/ui/components/: CyanCornerBrackets.kt  CyberpunkButton.kt  GlassSurface.kt  ModeSelectorPill.kt  PulsingDot.kt  VoiceCommandButton.kt
app/src/main/java/com/example/visionai/ui/overlay/: BottomControlsOverlay.kt  HeaderOverlay.kt  ViewfinderOverlay.kt
app/src/main/java/com/example/visionai/ui/screen/: MainScreen.kt
app/src/main/java/com/example/visionai/ui/sheet/: ChatContent.kt  PoweredByFooter.kt  ResponseBottomSheet.kt  ResponseContent.kt
app/src/main/java/com/example/visionai/ui/state/: ModelLoadOverlay.kt
app/src/main/java/com/example/visionai/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/java/com/example/visionai/voice/: VoiceCommandParser.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/visionai/: ExampleUnitTest.kt
docs/: privacy-policy.html
gradle/wrapper/: gradle-wrapper.properties
promo/: package-lock.json  package.json  remotion.config.js
promo/src/: PromoVideo.jsx  Root.jsx
promo/src/audio/: AudioLayer.jsx  generateBgm.mjs
promo/src/audio/music/: synthwave.js  wavEncoder.js
promo/src/audio/sfx/: tones.js  useSynthSfx.js
